# Trident

./: .gitmodules  CMakeLists.txt  README.md  pyproject.toml
core/lib/CAPI/: CMakeLists.txt  Dialects.cc  Registration.cc
core/python/: CMakeLists.txt  RegistrationModules.cc
core/python/dialects/: TVMFFIOpsPyBind.td  TorchExtOpsPyBind.td
core/python/trident_core/: __init__.py
core/python/trident_core/dialects/: torchext.py  tvm_ffi.py
core/tools/trident-core-opt/: CMakeLists.txt  trident-core-opt.cc
ffi/: CMakeLists.txt
ffi/include/: CMakeLists.txt
ffi/include/trident/ffi/: Exception.h
ffi/lib/: CMakeLists.txt  Exception.cc
ffi/python/: CMakeLists.txt  __init__.py  _ffi_api.py
libtriton-core/: CMakeLists.txt
libtriton-core/include/: CMakeLists.txt
libtriton-core/include/libtriton-core-c/: DLPackOps.h  DLPackTypes.h  Dialects.h  Registration.h  TVMFFIOps.h  TVMFFITypes.h
libtriton-core/include/libtriton-core/Conversion/: Passes.td
libtriton-core/include/libtriton-core/Conversion/DLPackToLLVM/: DLPackCAPIDescriptors.h  DLPackDTypeUtils.h  DLPackLLVMDescriptors.h  DLPackToLLVM.h
libtriton-core/include/libtriton-core/Conversion/EmitTVMFFIInterface/: EmitTVMFFIInterface.h
libtriton-core/include/libtriton-core/Conversion/Pipeline/: Pipeline.h
libtriton-core/include/libtriton-core/Conversion/TVMFFIToLLVM/: TVMFFIToLLVM.h  (+4 more)
libtriton-core/include/libtriton-core/Dialect/: CMakeLists.txt
libtriton-core/include/libtriton-core/Runtime/: Runtime.h
libtriton-core/include/libtriton_core/Analysis/: CMakeLists.txt
libtriton-core/include/libtriton_core/Conversion/: CMakeLists.txt  Passes.td
libtriton-core/lib/: CMakeLists.txt
libtriton-core/lib/Analysis/MemRefOriginAnalysis/: CMakeLists.txt  MemRefOriginAnalysis.cc
libtriton-core/lib/CAPI/: CMakeLists.txt  DLPackOps.cc  DLPackOps.cpp  DLPackTypes.cc  DLPackTypes.cpp  Dialects.cc  Dialects.cpp  Registration.cc  Registration.cpp  TVMFFIOps.cc  TVMFFIOps.cpp  TVMFFITypes.cc  TVMFFITypes.cpp
libtriton-core/lib/Conversion/: CMakeLists.txt
libtriton-core/lib/Conversion/AOTIToLLVM/: AOTIToLLVM.cc
libtriton-core/lib/Conversion/Bufferization/: Bufferization.cc
libtriton-core/lib/Conversion/ConvertFuncSignatureToDLPack/: CMakeLists.txt  ConvertFuncSignatureToDLPack.cc
libtriton-core/lib/Conversion/DLPackToLLVM/: CMakeLists.txt  DLPackDTypeUtils.cc  DLPackLLVMDescriptors.cc  DLPackToLLVM.cc
libtriton-core/lib/Conversion/EmitTVMFFIInterface/: CMakeLists.txt  EmitTVMFFIInterface.cc
libtriton-core/lib/Conversion/Pipeline/: CMakeLists.txt  Pipeline.cc
libtriton-core/lib/Conversion/TVMFFIToLLVM/: CMakeLists.txt  TVMFFILLVMDescriptors.cc  TVMFFIToLLVM.cc  ToConvertPatterns.cc  ToRules.cc
libtriton-core/lib/Conversion/TorchConversionToLLVM/: TorchConversionToLLVM.cc
libtriton-core/lib/Conversion/TorchExtToGPU/: TorchExtToGPU.cc
libtriton-core/lib/Conversion/TorchExtToLLVM/: CMakeLists.txt  SchemaLookup.cc  TorchExtToLLVM.cc
libtriton-core/lib/Conversion/TorchToAOTInductor/: CMakeLists.txt  TorchToAOTInductor.cc
libtriton-core/lib/Conversion/TorchToArith/: CMakeLists.txt  TorchToArith.cc
libtriton-core/lib/Conversion/TorchToLLVM/: CMakeLists.txt  SchemaLookup.cc  SchemaLookup.h  TorchToLLVM.cc
libtriton-core/lib/Conversion/TritonRTToLLVM/: CMakeLists.txt  TritonRTToLLVM.cc
libtriton-core/lib/Conversion/Utils/: CMakeLists.txt  GlobalString.cc  IConstantUtils.cc  TVMFFIUtils.cc  Type.cc
libtriton-core/lib/Dialect/: CMakeLists.txt
libtriton-core/lib/Runtime/: CMakeLists.txt  ExecutionEngineRuntimeExports.cc  Runtime.cc
libtriton-core/lib/Utils/: CMakeLists.txt  Registration.cc
libtriton-core/python/: CMakeLists.txt  LibTritonCoreModule.cpp  RegistrationModules.cc  TorchMlirCoreModule.cpp
libtriton-core/python/dialects/: DLPackOpsPyBind.td  TVMFFIOpsPyBind.td  TorchExtOpsPyBind.td  TorchOpsPyBind.td
libtriton-core/python/libtriton_core/: __init__.py  capi_utils.py
libtriton-core/python/libtriton_core/dialects/: dlpack.py  torch_ext.py  torchext.py  tvm_ffi.py
libtriton-core/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
libtriton-core/test/CAPI/: CMakeLists.txt  dlpack.c  torchext.c  tvmffi.c
libtriton-core/test/Conversion/Pipeline/: empty.mlir  empty_like.mlir
libtriton-core/test/Conversion/TVMFFIToLLVM/: basic.mlir
libtriton-core/test/Conversion/TorchExtToGPU/: basic.mlir
libtriton-core/test/Conversion/TorchExtToLLVM/: basic.mlir
libtriton-core/test/Conversion/TorchToAOTInductor/: basic.mlir
libtriton-core/test/Conversion/TorchToArith/: basic.mlir
libtriton-core/test/Conversion/TorchToLLVM/: basic.mlir
libtriton-core/test/Dialect/Bufferization/: libtriton-one-shot-bufferize.mlir
libtriton-core/test/Dialect/DLPack/: convert-func-signature-to-dlpack-call.mlir  convert-func-signature-to-dlpack.mlir  lower-to-llvm.mlir  ops.mlir  types.mlir
libtriton-core/test/Dialect/TVMFFI/: emit-tvm-ffi-interface.mlir  finalize-call.mlir  lower-to-llvm.mlir  ops.mlir
libtriton-core/test/Dialect/TorchExt/: async-kernel-launch.mlir  lower-to-llvm.mlir  normalize-launch-operands.mlir  ops.mlir
libtriton-core/test/Dialect/TritonRT/: async-kernel-launch.mlir  lower-to-llvm.mlir  normalize-launch-operands.mlir  ops.mlir
libtriton-core/test/Integration/: CMakeLists.txt  e2e-dlpack-add.mlir  e2e-dlpack-runner.c
libtriton-core/test/Integration/Scalar/: e2e-dlpack-scalar-add.mlir
libtriton-core/test/Integration/Tensor/: e2e-dlpack-tensor-add.mlir
libtriton-core/test/Python/: CMakeLists.txt  smoke.py  torch_dialect_pipeline.py  tvm_ffi_add_numpy_e2e.py  tvm_ffi_add_torch_cpu_e2e.py
libtriton-core/test/Python/Inputs/: tvm_ffi_tensor_add.mlir
libtriton-core/tools/: CMakeLists.txt
libtriton-core/tools/libtriton-core-opt/: CMakeLists.txt  libtriton-core-opt.cc
trident-core/lib/Runtime/: CMakeLists.txt  Exception.cc  Exception.h  Runtime.cc  Value.h
trident-core/lib/Runtime/python/: atengen.py
trident-core/tools/atengen/: CMakeLists.txt
trident-core/tools/atengen/python/: atengen.py
tvm_ffi_bindings/tools/tvm-ffi-opt/: CMakeLists.txt  tvm-ffi-opt.cc
(+374 files in other folders)
