[project]
name = "libtriton"
version = "0.1.0"
# Lock triton to 3.6.0 because version 3.7 changed the cache calculation API,
# causing errors when re-finding the cache.
# Require torch >= 2.10.0 for the stable C API.
dependencies = ["apache-tvm-ffi"]

[build-system]
requires = ["apache-tvm-ffi", "cmake", "nanobind", "ninja", "scikit-build-core", "torch>=2.10.0", "triton==3.6.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.install-dir = "libtriton/_C"
wheel.packages = ["python/libtriton"]
