[project]
name = "trident"
version = "0.1.0"
authors = [
    { name = "Jinjie Liu", email = "sgjzfzzf@gmail.com" },
]
license = { text = "MIT" }
# Require torch >= 2.10.0 for the stable C API.
dependencies = ["apache-tvm-ffi"]

[build-system]
requires = ["apache-tvm-ffi", "cmake", "jinja2", "nanobind", "ninja", "scikit-build-core", "torch>=2.10.0", "triton"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.install-dir = "trident"
wheel.packages = ["python/trident"]
